--- a/semana3/estilos3.css
+++ b/semana3/estilos3.css
@@ -1,7 +1,7 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+body { /*aqui le damos estilo al cuerpo principal de la pagina */
+    margin: 0; /*margen*/
+    padding: 0; /*borde*/
+    font-family: Arial, Helvetica, sans-serif; /*estilo de letra y fuente*/
 }
 
 /*--estilos a la seccion*/
@@ -11,14 +11,12 @@ main {
     width: 100%;
     height: auto;
     display: flex;
-    align-items: center;
-    /*acomodar los elementos de forma vertical*/
-    justify-content: center;
-    /*acomodar los elementos de forma horizontal*/
+    align-items: center; /*acomodar los elementos de forma vertical*/
+    justify-content: center;/*acomodar los elementos de forma horizontal*/
+    
 }
 
 #formularios {
-    border: 1px solid rebeccapurple;
     width: 50%;
     height: auto;
 }
@@ -40,7 +38,7 @@ label {
     /*aqui le damos el margen a los bloques  arr 10 , der 0 , abaj 5 , izq 0 */
 }
 
-input , select,area{
+input , select,textarea{
     width: 95%;
     padding: 5px;
     border: 1px solid #9b9a9a;
@@ -49,5 +47,35 @@ input , select,area{
 
 textarea{
     resize: none; /*aqui le quitamos al cuadro de comentarios el poder agrandarlo */
+
+}
+#radio-gropu,#checkbox-group{
+    display: flex; /*colocamos los dev en fila */
+    align-items: center;
     
 }
+input[type="radio"],input[type="checkbox"]{
+    width:auto;
+    margin-right: 10px;
+
+}
+ button{
+    width:100%;
+    /* margin-top: 15px;
+    margin-bottom: 20px; */
+    margin: 20px 0;
+    background-color: green;
+    font-size: 22px;
+    font-weight: 600;
+    color: white;
+    border-radius: 5px;
+    border: none;
+    padding: 10px;
+
+ }
+
+ button:hover{  /*cambiarle el estilo al puntero y el color a lo que queremos seleccionar */
+    cursor: pointer;
+    background-color: rgb(8, 67, 8);
+
+ }
